# snerg-viewer-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  PerspectiveCamera.h  README.md  Raymarch.cpp  Raymarch.h  TrackballControls.cpp  TrackballControls.h  constants.h  main.cpp  requirements.txt  scene.h  scene_params.json  shader.h
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  cmake.yml  cppcheck.yml  linux.yml
cppcheck/: data.txt  report.txt
glad/include/glad/: glad.h
glad/src/: glad.c
scripts/: download_data.py
src/: PerspectiveCamera.h  Raymarch.cpp  Raymarch.h  TrackballControls.cpp  TrackballControls.h  constants.h  scene.h  shader.h
